#ifndef DOGORITHM_H
#define DOGORITHM_H

#include <string>
#include "ChatRoom.h"

class Dogorithm : public ChatRoom{


};

#endif